# mesh-trace

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.xml  scene1.xml  scene_full_test.xml  scene_uv_debug.xml  test.xml
include/core/: BVH.h  Intersection.h  Ray.h
include/io/: Image.h  SceneParser.h
include/math/: Vec2.h  Vec3.h
include/render/: Renderer.h
include/scene/: Camera.h  Light.h  Material.h  Scene.h  Texture.h  Triangle.h
scenes/: checker.ppm  cube_simple.xml  grid_large.xml  mirror_scene.xml  textured_cube.xml  textured_cube_png.xml  two_cubes.xml
scripts/: run_smoke_tests.sh
src/: AABB.h  BVH.cpp  BVH.h  Camera.h  Image.cpp  Image.h  Light.h  Material.h  Mesh.h  Ray.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Vec3.h  XmlParser.cpp  XmlParser.h  main.cpp  stb_impl.cpp
src/core/: BVH.cpp
src/io/: Image.cpp  SceneParser.cpp
src/render/: Renderer.cpp
src/scene/: Camera.cpp  Scene.cpp  Texture.cpp  Triangle.cpp
tests/: test_main.cpp
tools/: gen_assets.py
